# hypr-voice

./: README.md  pyproject.toml
src/voice/: __init__.py  __main__.py  audio.py  cli.py  config.py  daemon.py  transcribe.py
