[project]
name = "voice"
version = "0.1.0"
description = "Push-to-talk voice dictation daemon for Wayland"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.1.0",
    "sounddevice>=0.5.0",
    "numpy>=2.0.0",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]

[project.scripts]
voice = "voice.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/voice"]

[tool.ruff]
src = ["src"]
exclude = [
  ".venv",
  ".git",
  "__pypackages__",
  "build",
  "dist",
  "alembic",
  "scripts",
]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
  # Core
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  # Strictness
  "B",   # flake8-bugbear
  "I",   # isort
  "C90", # mccabe complexity
  # Style
  "N",   # pep8-naming
  "D",   # pydocstyle
  "UP",  # pyupgrade
  "ANN", # flake8-annotations
  # Compatibility and cleanup
  "COM", # flake8-commas
  "C4",  # flake8-comprehensions
  "ISC", # implicit-str-concat
  "PIE", # flake8-pie
  "T20", # flake8-print
  "PYI", # flake8-pyi
  "PT",  # flake8-pytest-style
  "Q",   # flake8-quotes
  "RSE", # flake8-raise
  "RET", # flake8-return
  "SIM", # flake8-simplify
  "TC",  # flake8-type-checking
  "ARG", # flake8-unused-arguments
  "PTH", # flake8-use-pathlib
  "ERA", # eradicate
  "PGH", # pygrep-hooks
  # Logic, bugs and security
  "PL",  # pylint
  "TRY", # tryceratops
  "FLY", # flynt
  "LOG", # flake8-logging
  "A",   # flake8-builtins
  "S",   # flake8-bandit
  "INT", # flake8-gettext
  "BLE", # flake8-blind-except
  "FBT", # flake8-boolean-trap
  "EXE", # flake8-executable
  "INP", # flake8-implicit-namespace-package
  # Ruff-specific
  "RUF", # Ruff-specific rules
]
ignore = ["COM812"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pylint]
max-args = 7
max-returns = 9
max-branches = 15

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
